Thu Jan 14 15:08:43 2016  Tony Arcieri  <bascule@gmail.com>

	* Remove 512-bit DH group. It's affected by LogJam Attack.
	  https://weakdh.org/
	  [fix GH-1196][Bug #11968][ruby-core:72766]

Thu Jan 14 11:44:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_f_global_variables): add $1..$9 only if $~ is
	  set.  fix the condition removed at r14014.

Wed Jan 13 17:21:45 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* .travis.yml: removed commented-out code.

Wed Jan 13 17:14:54 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* .travis.yml: removed osx code. follow up with r53517

Wed Jan 13 16:56:19 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (rb_iseq_mark): mark parent iseq to prevent dynamically
	  generated iseq by eval from GC.  [ruby-core:72620] [Bug #11928]

Wed Jan 13 03:42:58 2016  Eric Wong  <e@80x24.org>

	* class.c (Init_class_hierarchy): resolve name for rb_cObject ASAP
	* object.c (rb_mod_const_set): move name resolution to rb_const_set
	* variable.c (rb_const_set): do class resolution here
	  [ruby-core:72807] [Bug #11977]

Wed Jan 13 00:37:12 2016  Satoshi Ohmori  <sachin21dev@gmail.com>

	* man/ruby.1: fix double word typo.  [Fix GH-1194]

Tue Jan 12 21:01:09 2016  Benoit Daloze  <eregontp@gmail.com>

	* common.mk: update URL and name for the Ruby spec suite.

Tue Jan 12 19:52:19 2016  sorah (Shota Fukumori)  <her@sorah.jp>

	* lib/forwardable.rb: Convert given accessors to String.

	  r53381 changed to accept only Symbol or String for accessors, but
	  there are several rubygems that pass classes (e.g. Array,
	  Hash, ...) as accessors. Prior r53381, it was accepted because Class#to_s
	  returns its class name. After r53381 given accessors are checked
	  with define_method, but it accepts only Symbol or String, otherwise
	  raises TypeError.

	      def_delegator Foo, :some_method

	  This change is to revert unexpected incompatibility. But this behavior
	  may change in the future.
